fsgraph: fix some overflows in UI

--- a/demo/fsgraph/css/default.css
+++ b/demo/fsgraph/css/default.css
@@ -38,6 +38,7 @@
     display: flex;
     min-height: 0;
     position: relative;
+    overflow: hidden;
 }
 
 
@@ -46,6 +47,12 @@
     padding: 20px;
     z-index: 2;
     background-color: white;
+}
+
+.scivi_fsgraph_stateline_label
+{
+    text-align: center;
+    position: absolute;
 }
 
 #scivi_fsgraph_tabs
